# Movie_Recommendation_System

./: .gitignore  README.md  als_rec.py  create_user_item.py  map_ids.py  paths.py  pyproject.toml  server.py  svd_recommender.py  test_api.py  tiny_server.py
Movie_Recom/code/: als_fallback_svd.py  contenrt_rec.py  create_user_item.py  map_ids.py  requirements.txt  test_api.py
Movie_Recom/dataset/: user_item.csv
